Setup native build